--- a/views/admin/adminlogin.ejs
+++ b/views/admin/adminlogin.ejs
@@ -23,9 +23,9 @@
 						<div class="block"></div>
 						<div class="container has-text-centered">
 							<button class="button is-medium submit-button" id="login">Login</button>
+							<a class="button is-medium submit-button" href="/">Return to Home</a>
 						</div>
 
-						<a href="/">Home</a>
 					</form>
 				</div>
 			</div>
