--- a/views/admin/admin-add-product.ejs
+++ b/views/admin/admin-add-product.ejs
@@ -10,6 +10,7 @@
     </section>
 
     <div class="container" style="margin-top: 60px">
+        <div id="errorDiv"></div>
         <form enctype="multipart/form-data" class="admin-edit-product" method="post">
             <div class="product-photos align-items-center">
                 <div>
@@ -47,7 +48,7 @@
             </table>
 
             <div>
-                <button type="submit" class="button submit-button is-medium" style="margin-bottom: 10px; margin-left: 41.5%;" value="SUBMIT">Add Product</button>
+                <button type="submit" id="prodAdd" class="button submit-button is-medium" style="margin-bottom: 10px; margin-left: 41.5%;" value="SUBMIT">Add Product</button>
             </div>
 
         </form>
