--- a/views/admin/admin-product.ejs
+++ b/views/admin/admin-product.ejs
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                 </td>
-                <td>
+                <td style="width: 50px">
                     <a href="/admin/admin-edit-product/<%=element._id%>" class="button submit-button is-small">Modify</a>
                 </td>
                 <td>
