--- a/views/client/products.ejs
+++ b/views/client/products.ejs
@@ -29,10 +29,8 @@
             </div>
            
         <% } else {%>
-        <% for(var i = 0; i < result.length; i++) { %>
-            <% if (i === 0 || i % 5 === 0) { %>
-                <div class="columns">
-            <% } %>
+        <div class="columns">
+        <% for(var i = 0; i < result.length; i++) { %> 
                 <div class="column is-one-fifth-desktop">
                     <div class="card ourproducts-card">
                         <div class="card-image">
@@ -52,10 +50,14 @@
                         </footer>
                     </div>
                 </div>
-        <% if (i === 0 || i % 5 === 0) { %>
-        </div>
+                <% if(i % 4 === 0 && i != 0 && i != result.length) { %> 
+                </div>   
+                <div class="columns">
+                <% }  %>
+      <% }  %>
+    </div>  
       <% } %>
-      <% } %>
+      
     </section>
     <%- include('./partials/footer.ejs');%>
 </div>
