--- a/views/client/about.ejs
+++ b/views/client/about.ejs
@@ -12,6 +12,25 @@
             <p>Baked Goods was founded on 2020 by three DLSU students and started out as a fun little project during the lockdown. It later grew to become a crowds favorite go-to online bakery. Thanks to its accesibility, ease of access and taste, it continues to provide its clients with highest quality bread for an affordable price.</p>
             <br />
             <p><i>Photos and Videos from Pexels</i></p>
+            <p>Libraries Used</p>
+            <ul>
+                <li>ExpressJS</li>
+                <li>SASS</li>
+                <li>Bulma</li>
+                <li>Bycrypt</li>
+                <li>EJS</li>
+                <li>connect-mongo</li>
+                <li>body-parser</li>
+                <li>mongoose</li>
+                <li>express-session</li>
+                <li>express-validator</li>
+                <li>fs</li>
+                <li>git</li>
+                <li>multer</li>
+                <li>nanoid</li>
+                <li>path</li>
+                <li>uuid</li>
+                </ul>
         </section>
         
     </div>
